styles added to HTML creation creation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <h1>
-        Devops Html creation
-    </h1>
+    <body style="background-color:aquamarine">
+        <h1 style="color:black;text-align: center;">
+       Devops HTML Creation
+            <h1>
+            </body>
 </html>
