--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body style="background-color:aquamarine">
+    <body style="background-color: blueviolet">
         <h1 style="color:black;text-align: center;">
        Devops HTML Creation
             <h1>
